# conduit

./: .gitignore  Caddyfile  Cargo.toml  Dockerfile  PRIVACY.md  README.md  build-android.sh  build-arm-android.sh  build-ios.sh  docker-compose-testing.yml  docker-compose.yml  index.html  pubspec.yaml  test.sh
.github/workflows/: android-release.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/app/conduit/wallet/: MainActivity.kt
android/app/src/main/kotlin/app/ecash/: MainActivity.kt
assets/: generate_feature_graphic.py  generate_icon.py  generate_qr_icons.py
conduit-cli/: Cargo.toml
conduit-cli/src/: main.rs
conduit-core/: Cargo.toml
conduit-core/src/: account.rs  admin.rs  lib.rs  user.rs
conduit-daemon/: Cargo.toml
conduit-daemon/migrations/2025-06-11-133822_v0/: down.sql  up.sql
conduit-daemon/src/: auth.rs  db.rs  error.rs  events.rs  main.rs  models.rs  schema.rs
conduit-daemon/src/rpc/: account.rs  admin.rs  lnurl.rs  lnurlp.rs  mod.rs  user.rs
conduit-testing/: Cargo.toml
conduit-testing/src/: account.rs  admin.rs  main.rs  user.rs
conduit-testing/src/cli/: account.rs  admin.rs  daemon.rs  mod.rs  user.rs
docs/: contributing.md  release-process.md
ios/: Podfile  conduit.podspec
ios/Runner/: Info.plist  SCNetworkStubs.c
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/drawers/: bitcoin_address_prompt_drawer.dart  cancel_ecash_drawer.dart  confirm_currency_drawer.dart  confirm_lightning_send_drawer.dart  contact_drawer.dart  delete_contact_drawer.dart  ecash_drawer.dart  ecash_receive_drawer.dart  edit_contact_drawer.dart  event_details_drawer.dart  expiration_drawer.dart  federation_invite_drawer.dart  generate_address_drawer.dart  generate_onchain_address_drawer.dart  invite_confirmation_drawer.dart  invite_drawer.dart  invite_scanner_drawer.dart  leave_federation_drawer.dart  lightning_invoice_drawer.dart  lightning_payment_drawer.dart  lnurl_drawer.dart  lnurl_prompt_drawer.dart  onchain_address_drawer.dart  payment_details_drawer.dart  recovery_drawer.dart  save_contact_drawer.dart  scanner_drawer.dart  wallet_v2_wallet_details_drawer.dart
lib/screens/: amount_screen.dart  base_screen.dart  bitcoin_address_screen.dart  bitcoin_send_amount_screen.dart  confirm_lnurl_send_screen.dart  confirm_onchain_send_screen.dart  confirm_recovery_phrase_screen.dart  confirm_seed_screen.dart  connection_status_screen.dart  contact_name_entry_screen.dart  contacts_screen.dart  currency_selection_screen.dart  display_contacts_screen.dart  display_ecash_screen.dart  display_invoice_screen.dart  display_lnurl_screen.dart  display_recovery_phrase_screen.dart  display_seed_screen.dart  ecash_amount_screen.dart  ecash_send_amount_screen.dart  federation_screen.dart  home_screen.dart  input_recovery_phrase_screen.dart  input_seed_screen.dart  invoice_amount_screen.dart  landing_screen.dart  lightning_address_entry_screen.dart  lightning_receive_amount_screen.dart  lnurl_amount_screen.dart  lnurl_payment_amount_screen.dart  onchain_address_screen.dart  onchain_amount_screen.dart  payment_history_screen.dart  recovery_screen.dart  select_currency_screen.dart  settings_screen.dart  wallet_choice_screen.dart  wallet_v2_receive_screen.dart
lib/utils/: async_button_mixin.dart  auth_utils.dart  currency_utils.dart  drawer_utils.dart  notification_utils.dart  number_utils.dart  payment_type_utils.dart  payment_utils.dart  styles.dart
lib/widgets/: address_card_widget.dart  amount_card.dart  amount_card_widget.dart  amount_detail_list_widget.dart  amount_display.dart  amount_display_widget.dart  amount_entry_widget.dart  amount_rows.dart  amount_visibility.dart  animated_balance_widget.dart  animated_entry_widget.dart  async_action_button.dart  async_button_mixin.dart  async_button_widget.dart  async_icon_button_widget.dart  async_text_button.dart  async_text_button_widget.dart  bleed_column_widget.dart  bordered_list_widget.dart  connection_status_header_widget.dart  copy_button.dart  detail_row_widget.dart  drawer_shell.dart  drawer_shell_widget.dart  event_transaction_item.dart  event_transactions_list.dart  grouped_list_widget.dart  icon_badge.dart  icon_chip_widget.dart  invite_scanner_widget.dart  multi_scanner_widget.dart  navigation_button.dart  onboarding_card_widget.dart  payment_card_widget.dart  payment_list_widget.dart  payment_summary_row_widget.dart  primary_card_widget.dart  qr_code_widget.dart  qr_display_layout_widget.dart  qr_scanner_widget.dart  (+14 more)
linux/: CMakeLists.txt
linux/runner/: my_application.cc
rust/: Cargo.toml
rust/src/: client.rs  currency.rs  db.rs  events.rs  exchange.rs  factory.rs  fountain.rs  frb_generated.rs  lib.rs  lnurl.rs
