[package]
name = "conduit-core"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
bitcoin = { workspace = true, features = ["serde"] }
ldk-node = { workspace = true }
url = { workspace = true }
lightning-invoice = { workspace = true }
