[package]
name = "conduit"
version = "0.2.6"
edition = "2024"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(frb_expand)'] }

[dependencies]
fedimint-api-client = { git = "https://github.com/joschisan/fedimint", branch = "mintv2" }
fedimint-bip39 = { git = "https://github.com/joschisan/fedimint", branch = "mintv2" }
fedimint-core = { git = "https://github.com/joschisan/fedimint", branch = "mintv2" }
fedimint-connectors = { git = "https://github.com/joschisan/fedimint", branch = "mintv2" }
fedimint-client = { git = "https://github.com/joschisan/fedimint", branch = "mintv2" }
fedimint-eventlog = { git = "https://github.com/joschisan/fedimint", branch = "mintv2" }
fedimint-fountain = { git = "https://github.com/joschisan/fedimint", branch = "mintv2" }
fedimint-rocksdb = { git = "https://github.com/joschisan/fedimint", branch = "mintv2" }
fedimint-lnv2-client = { git = "https://github.com/joschisan/fedimint", branch = "mintv2" }
fedimint-lnv2-common = { git = "https://github.com/joschisan/fedimint", branch = "mintv2" }
fedimint-mint-client = { git = "https://github.com/joschisan/fedimint", branch = "mintv2" }
fedimint-wallet-client = { git = "https://github.com/joschisan/fedimint", branch = "mintv2" }
fedimint-client-module = { git = "https://github.com/joschisan/fedimint", branch = "mintv2" }
fedimint-meta-client = { git = "https://github.com/joschisan/fedimint", branch = "mintv2" }
fedimint-walletv2-client = { git = "https://github.com/joschisan/fedimint", branch = "mintv2" }
fedimint-walletv2-common = { git = "https://github.com/joschisan/fedimint", branch = "mintv2" }
fedimint-mintv2-client = { git = "https://github.com/joschisan/fedimint", branch = "mintv2" }
fedimint-mintv2-common = { git = "https://github.com/joschisan/fedimint", branch = "mintv2" }
bitcoin = "0.32.5"
log = "0.4"
flutter_rust_bridge = "=2.10.0"
futures-util = "0.3.30"
lightning-invoice = { version = "0.33.2", features = ["std"] }
fedimint-lnurl = { git = "https://github.com/fedimint/fedimint" }
# Pin versions to avoid netwatch/socket2 incompatibility in fedimint 0.9.0
reqwest = { version = "=0.12.22", features = ["rustls-tls", "json"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
tokio = "=1.48.0"
regex = "1"
hyper-util = "=0.1.14"
surge-ping = "=0.8.2"
socket2 = "=0.5.9"
url = "2"

[profile.dev.package]
tikv-jemalloc-sys = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
secp256k1 = { opt-level = 3}
secp256k1-sys = { opt-level = 3}

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = false
debug = "line-tables-only"

[profile.release.package]
tikv-jemalloc-sys = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
secp256k1 = { opt-level = 3}
secp256k1-sys = { opt-level = 3}
